Added variable description to C3S_climate_data

--- a/C3S_climate_data.ipynb
+++ b/C3S_climate_data.ipynb
@@ -12,6 +12,32 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b5b7e278",
+   "metadata": {},
+   "source": [
+    "**1. temp_max (Daily Maximum Air Temperature):**\n",
+    "\n",
+    "- Scientific Definition: The highest temperature recorded at 2 meters height above the land surface within the 24-hour period.\n",
+    "\n",
+    "- Unit: The raw data is in Kelvin (K).\n",
+    "\n",
+    "- Why it matters for our analysis: This is the \"Heat Stress\" indicator. Agriculture is more sensitive to extremes than averages. Even if the average temperature is normal, a single week where temp_max exceeds 30°C or 35°C (depending on the crop) can sterilize pollen or halt grain filling, destroying the harvest.\n",
+    "\n",
+    "**2. precip (Precipitation Flux):**\n",
+    "\n",
+    "- Scientific Definition: The total volume of water (liquid rain or frozen snow) that reaches the ground per unit area over the 24-hour period.\n",
+    "\n",
+    "- Unit: Millimeters (mm) per day, which is equivalent to Liters per square meter ($L/m^2$).\n",
+    "\n",
+    "- Why it matters for our analysis: This is your \"Water Availability\" indicator. You will use this to identify:\n",
+    "\n",
+    "    - Droughts: Extended periods during the growing season (April–July) where the cumulative precip is significantly below the 20-year average.\n",
+    "    \n",
+    "    - Floods: Sudden, extreme spikes in precip that can wash away seeds or rot roots."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e0c39bf8",
    "metadata": {},
    "source": [
