--- a/ExDEx_Exercise_2 _Group_7.ipynb
+++ b/ExDEx_Exercise_2 _Group_7.ipynb
@@ -2790,7 +2790,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2804,7 +2804,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
