--- a/ExDEx_question.ipynb
+++ b/ExDEx_question.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7df501b1",
+   "metadata": {},
+   "source": [
+    "# ExDEx Exercise 2 Code\n",
+    "\n",
+    "**Group 7:** Dominik J. Gorickic, Brandon J. Nader, Manuel Petschinger, Michael Wolkerstorfer"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "id": "d9fe9e50",
@@ -866,7 +876,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.10.8)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -880,7 +890,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
